storage commits, phase 2 swf-57